# Voxex

./: .gitignore  README.md  project
resources/models/: capsule.mtl  chunk.mtl
resources/shaders/: basicShader.frag  basicShader.vert
resources/shaders/glsl/: basic.frag  chunk.frag  chunk.vert  generic.vert
resources/shaders/spirv/: basic.frag  chunk.frag  chunk.frag.spv  chunk.vert  chunk.vert.spv  generic.vert
resources/shaders/spirv/raw/: chunk.vert
src/: AnimatedCamera.hpp  BlockMap.hpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkBuilder.cpp  ChunkBuilder.hpp  ChunkLoader.cpp  ChunkLoader.hpp  CombinedGl.h  ControlledAI.cpp  ControlledAI.hpp  FollowCamera.cpp  FollowCamera.hpp  Main.cpp  MouseHandler.cpp  MouseHandler.hpp  Names.hpp  Perlin.cpp  Perlin.hpp  PlayerInputComponent.cpp  PlayerInputComponent.hpp  RegionTree.cpp  RegionTree.hpp  Renderer.cpp  Renderer.hpp  SquareCamera.cpp  SquareCamera.hpp  Voxex.cpp  Voxex.hpp  gl_core_4_5.c  gl_core_4_5.h
src/Mobs/: Adventurer.cpp  Adventurer.hpp  BoxMonster.hpp  Mob.cpp  Mob.hpp  MobState.hpp
